# Connectors

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md
.devcontainer/: devcontainer.json
apps/: moex_cert_runner.py  moex_plaza2_aggr20_md_runner.py  moex_plaza2_cert_runner.py  moex_plaza2_trade_test_order_runner.py  moex_plaza2_twime_integrated_runner.py  moex_replay_tool.py  plaza2_aggr20_md_test_runner.cpp  plaza2_test_runner.cpp  plaza2_trade_test_order_entry_runner.cpp  plaza2_twime_integrated_test_runner.cpp  twime_cert_runner.cpp
cmake/: python_launcher.sh.in
connectors/plaza2_trade/: CMakeLists.txt
connectors/plaza2_trade/include/moex/plaza2_trade/: plaza2_trade_codec.hpp  plaza2_trade_commands.hpp  plaza2_trade_fake_session.hpp  plaza2_trade_replies.hpp  plaza2_trade_test_order_runner.hpp
connectors/plaza2_trade/src/: plaza2_trade_codec.cpp  plaza2_trade_fake_session.cpp  plaza2_trade_test_order_runner.cpp
connectors/plaza2_twime_reconciler/: CMakeLists.txt
connectors/plaza2_twime_reconciler/include/moex/plaza2_twime_reconciler/: plaza2_twime_integrated_test_runner.hpp  plaza2_twime_reconciler.hpp
connectors/plaza2_twime_reconciler/src/: plaza2_twime_integrated_test_runner.cpp  plaza2_twime_reconciler.cpp
connectors/twime_trade/: CMakeLists.txt
connectors/twime_trade/include/moex/twime_trade/: twime_cert_scenario_runner.hpp  twime_fake_transport.hpp  twime_live_session_runner.hpp  twime_manual_operator_gate.hpp  twime_rate_limit_model.hpp  twime_recovery_state.hpp  twime_sequence_state.hpp  twime_session.hpp  twime_session_health.hpp  twime_session_metrics.hpp  twime_session_persistence.hpp
connectors/twime_trade/include/moex/twime_trade/transport/: itwime_byte_transport.hpp  twime_credential_provider.hpp  twime_credential_redaction.hpp  twime_endpoint_resolver.hpp  twime_loopback_transport.hpp  twime_reconnect_policy.hpp  twime_scripted_transport.hpp  twime_socket_handle.hpp  twime_tcp_config.hpp  twime_tcp_endpoint.hpp  twime_tcp_transport.hpp  twime_test_network_gate.hpp  twime_transport_errors.hpp  twime_transport_events.hpp  twime_transport_metrics.hpp
connectors/twime_trade/src/: twime_cert_scenario_runner.cpp  twime_fake_transport.cpp  twime_live_session_runner.cpp  twime_manual_operator_gate.cpp  twime_rate_limit_model.cpp  twime_recovery_state.cpp  twime_sequence_state.cpp  twime_session.cpp  twime_session_health.cpp  twime_session_metrics.cpp  twime_session_persistence.cpp
connectors/twime_trade/src/transport/: twime_credential_provider.cpp  twime_credential_redaction.cpp  twime_endpoint_resolver.cpp  twime_loopback_transport.cpp  twime_reconnect_policy.cpp  twime_scripted_transport.cpp  twime_socket_handle.cpp  twime_tcp_endpoint.cpp  twime_tcp_transport.cpp  twime_test_network_gate.cpp
docker/: Dockerfile.phase0
docs/: abi_policy.md  alorengine_integration.md  backpressure_policy.md  broker_questionnaire_ru.md  broker_topology.md  github_labels.md  phase1_status.md  plaza2_phase3a_spec_lock.md  plaza2_phase3b_codegen.md  plaza2_phase3c_runtime_adapter.md  plaza2_phase3d_fake_engine.md  plaza2_phase3e_private_state.md  plaza2_phase3f_test_bringup.md  plaza2_phase4a_twime_reconciler.md  plaza2_phase4b_capi_read_side.md  plaza2_phase4c_integrated_test_bringup.md  plaza2_phase4d_vps_cgate_install_evidence.md  plaza2_phase4e_runtime_scheme_lock.md  plaza2_phase4f_connection_handshake.md  plaza2_phase5a_trade_spec_lock.md  plaza2_phase5b_trade_offline_codec.md  plaza2_phase5c_trade_fake_session.md  plaza2_phase5d_aggr20_market_data_bringup.md  plaza2_phase5e_test_order_entry_bringup.md  redaction_policy.md  secrets_and_redaction.md  shadow_mode.md  shadow_mode_diff_spec.md  timestamp_policy.md  twime_operator_runbook.md  twime_phase2a_codec.md  twime_phase2b_session_fsm.md  twime_phase2c_transport.md  twime_phase2d_tcp_transport.md  twime_phase2e_test_endpoint_gating.md  twime_phase2f_test_session_bringup.md
matrix/: alorengine_adapter_map.yaml  alorengine_event_map.yaml  artifacts.yaml  cert_scenarios.yaml  connectors.yaml  gaps.yaml  implementation_coverage.yaml  osengine_inventory.yaml
profiles/: prod_fast_twime.template.yaml  prod_fix_fast.template.yaml  prod_plaza2_full.template.yaml  prod_plaza2_twime.template.yaml  replay.yaml  test_fast_twime.yaml  test_fix_fast.yaml  test_plaza2_aggr20_md.template.yaml  test_plaza2_aggr20_md_local.example.yaml  test_plaza2_full.yaml  test_plaza2_repl_live_session.template.yaml  test_plaza2_repl_live_session_local.example.yaml  test_plaza2_trade_order_entry.template.yaml  test_plaza2_trade_order_entry_local.example.yaml  test_plaza2_twime.yaml  test_plaza2_twime_integrated_session.template.yaml  test_plaza2_twime_integrated_session_local.example.yaml  test_simba_twime.yaml  test_twime_live_session.template.yaml  test_twime_live_session_local.example.yaml  test_twime_tcp_external.template.yaml  test_twime_tcp_external_local.example.yaml  test_twime_tcp_fragmentation.yaml  test_twime_tcp_loopback.yaml  test_twime_tcp_remote_close.yaml
protocols/plaza2_cgate/: CMakeLists.txt
protocols/plaza2_cgate/include/moex/plaza2/cgate/: plaza2_aggr20_md.hpp  plaza2_credential_provider.hpp  plaza2_fake_engine.hpp  plaza2_live_session_runner.hpp  plaza2_manual_operator_gate.hpp  plaza2_private_state.hpp  plaza2_runtime.hpp
protocols/plaza2_cgate/schema/: plaza2_forts_reviewed.ini  schema.manifest.json
protocols/plaza2_cgate/src/: plaza2_aggr20_md.cpp  plaza2_credential_provider.cpp  plaza2_fake_engine.cpp  plaza2_live_session_runner.cpp  plaza2_manual_operator_gate.cpp  plaza2_private_state.cpp  plaza2_runtime.cpp
protocols/twime_sbe/: CMakeLists.txt  README.md
protocols/twime_sbe/include/moex/twime_sbe/: twime_cert_log_formatter.hpp  twime_codec.hpp  twime_frame_assembler.hpp  twime_message_header.hpp  twime_schema.hpp  twime_types.hpp
protocols/twime_sbe/schema/: schema.manifest.json  twime_spectra-7.7.xml
protocols/twime_sbe/src/: twime_cert_log_formatter.cpp  twime_codec.cpp  twime_frame_assembler.cpp
scripts/: ci_local.sh
spec-lock/: README.md  (+1 more)
(+349 files in other folders)
